feat-strip-story:   - observe to strip_loaded event   - dynamic dataChannelTokens for strip loading.   - Readme.md update

--- a/Sources/ApesterKit.bundle/apester-strip.html
+++ b/Sources/ApesterKit.bundle/apester-strip.html
@@ -29,6 +29,6 @@
     <script src="https://static.apester.com/js/sdk/v2.0/apester-javascript-sdk.min.js"></script>
   </head>
   <body>
-    <div class="apester-strip apester-element" data-channel-tokens="5890a541a9133e0e000e31aa" style="height: 220px;"></div>
+    <div class="apester-strip apester-element" data-channel-tokens style="height: 220px;"></div>
   </body>
 </html>
