--- a/Sources/ApesterKit.bundle/apester-strip-story.html
+++ b/Sources/ApesterKit.bundle/apester-strip-story.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <script>
       window.__sendApesterEvent = event => {
