--- a/Sources/ApesterKit.bundle/apester-strip.html
+++ b/Sources/ApesterKit.bundle/apester-strip.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script>
       const blackListEvents = {
         STRIP_NEXT_UNIT: 'strip_next_unit',
